fixed overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -118,9 +118,10 @@
   body {
     @apply bg-background text-foreground;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   #root {
     height: 100%;
+    overflow: hidden;
   }
 }
